# Anneal-Panel

./: .gitignore  .gitmodules  Cargo.toml  README.md  README.ru.md  docker-compose.test.yml  package.json
.github/workflows/: pr-checks.yml  release-master.yml
apps/annealctl/: Cargo.toml
apps/annealctl/src/: bootstrap.rs  cli.rs  config.rs  i18n.rs  main.rs  release.rs  render.rs  state.rs  system.rs
apps/annealctl/src/commands/: doctor.rs  install.rs  mod.rs  restart.rs  status.rs  uninstall.rs  update.rs
apps/annealctl/src/ui/: mod.rs  progress.rs  reporter.rs  tui.rs  wizard.rs
apps/api/: Cargo.toml
apps/api/src/: app_state.rs  error.rs  extractors.rs  main.rs  openapi.rs
apps/api/src/transport/: audit.rs  auth.rs  mod.rs  nodes.rs  notifications.rs  rollout_sync.rs  subscriptions.rs  usage.rs  users.rs
apps/node-agent/: Cargo.toml
apps/node-agent/src/: client.rs  main.rs  runtime.rs
apps/worker/: Cargo.toml
apps/worker/src/: main.rs
crates/audit/: Cargo.toml
crates/audit/src/: application.rs  domain.rs  infrastructure.rs  lib.rs
crates/auth/: Cargo.toml
crates/auth/src/: application.rs  domain.rs  infrastructure.rs  lib.rs
crates/config-engine/: Cargo.toml
crates/config-engine/src/: application.rs  domain.rs  lib.rs  subscription.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  model.rs  secret.rs  token.rs
crates/nodes/: Cargo.toml
crates/nodes/src/: application.rs  domain.rs  infrastructure.rs  lib.rs
crates/notifications/: Cargo.toml
crates/notifications/src/: application.rs  domain.rs  infrastructure.rs  lib.rs
crates/platform/: Cargo.toml
crates/platform/src/: data_protection.rs  db.rs  jobs.rs  lib.rs  settings.rs  telemetry.rs
crates/rbac/: Cargo.toml
crates/rbac/src/: application.rs  domain.rs  lib.rs
crates/subscriptions/: Cargo.toml
crates/subscriptions/src/: application.rs  domain.rs  infrastructure.rs  lib.rs
crates/usage/: Cargo.toml
crates/usage/src/: application.rs  domain.rs  infrastructure.rs  lib.rs
crates/users/: Cargo.toml
crates/users/src/: application.rs  domain.rs  infrastructure.rs  lib.rs
deploy/caddy/: Caddyfile.tpl
deploy/docker/: Caddyfile.web  api.Dockerfile  e2e-runner.Dockerfile  installer-vps-test.Dockerfile  node-agent.Dockerfile  web.Dockerfile  worker.Dockerfile
deploy/docker/prebuilt/: api.Dockerfile  control-plane.Caddyfile.tpl  control-plane.compose.yml  node-agent.Dockerfile  node-supervisord.conf  node.compose.yml  web.Dockerfile  worker.Dockerfile
deploy/systemd/: anneal-api.service  anneal-caddy.service  anneal-mihomo.service  anneal-node-agent.service  anneal-singbox.service  anneal-worker.service  anneal-xray.service
migrations/: 20260321140000_initial.sql  20260321143000_node_endpoints_and_rollout_engine.sql  20260321150000_apalis_postgres.sql  20260321153000_fix_apalis_jobs_layout.sql  20260321170000_rollout_revision_link.sql  20260321183000_node_endpoint_tls_assets.sql  20260321193000_subscription_limits_and_access_keys.sql  20260321211000_node_group_domains.sql  20260322130000_auth_rate_limits.sql  20260322220000_node_auth_and_rollout_ownership.sql  20260322233000_subscription_link_token_hash.sql  20260323000000_pre_auth_challenges.sql  20260323100000_security_tokens_and_bootstrap.sql  20260323120000_drop_subscription_link_tokens.sql  20260513160000_subscription_display_names.sql
scripts/: docker-e2e.sh  install.sh  installer-smoke.sh  native-smoke.sh  package-release.ps1  package-release.sh  release-smoke.sh  verify-bundle.sh
web/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  translate.cjs
web/src/: app.tsx  index.css  main.tsx  router.tsx
web/src/components/: auth-required.tsx  expandable-text.tsx  language-switcher.tsx  metric-card.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  confirm-dialog.tsx  dialog.tsx  input.tsx  select.tsx  textarea.tsx
web/src/lib/: api.ts  format.ts  i18n-types.ts  i18n.ts  panel-base.ts  use-now.ts
web/src/locales/: en.ts  ru.ts
web/src/routes/: dashboard.tsx  devices.tsx  login.tsx  node-endpoints.tsx  nodes.tsx  notifications.tsx  public-subscription.tsx  rollouts.tsx  subscriptions.tsx  users.tsx
