[workspace]
resolver = "2"
members = [
    "apps/api",
    "apps/node-agent",
    "apps/worker",
    "crates/audit",
    "crates/auth",
    "crates/config-engine",
    "crates/core",
    "crates/nodes",
    "crates/notifications",
    "crates/platform",
    "crates/rbac",
    "crates/subscriptions",
    "crates/usage",
    "crates/users",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "AGPL-3.0"
authors = ["Miroshka"]
publish = false

[workspace.dependencies]
anneal-audit = { path = "crates/audit" }
anneal-auth = { path = "crates/auth" }
anneal-config-engine = { path = "crates/config-engine" }
anneal-core = { path = "crates/core" }
anneal-nodes = { path = "crates/nodes" }
anneal-notifications = { path = "crates/notifications" }
anneal-platform = { path = "crates/platform" }
anneal-rbac = { path = "crates/rbac" }
anneal-subscriptions = { path = "crates/subscriptions" }
anneal-usage = { path = "crates/usage" }
anneal-users = { path = "crates/users" }
anyhow = "1.0.100"
apalis = "1.0.0-rc.6"
apalis-postgres = { version = "1.0.0-rc.6", features = ["migrate", "tokio-comp", "chrono"] }
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["macros"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde", "clock"] }
clap = { version = "4.5.49", features = ["derive", "env"] }
futures = "0.3.31"
jsonwebtoken = "9.3.1"
rand = "0.8.5"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate", "macros"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
totp-rs = { version = "5.7.1", features = ["gen_secret", "otpauth"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
opentelemetry = "0.29.1"
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic"] }
opentelemetry_sdk = "0.29.0"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[workspace.lints.clippy]
all = "warn"
nursery = "warn"
pedantic = "warn"
