[workspace]
resolver = "2"
members = [
    "apps/api",
    "apps/annealctl",
    "apps/node-agent",
    "apps/worker",
    "crates/audit",
    "crates/auth",
    "crates/config-engine",
    "crates/core",
    "crates/nodes",
    "crates/notifications",
    "crates/platform",
    "crates/rbac",
    "crates/subscriptions",
    "crates/usage",
    "crates/users",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "AGPL-3.0"
authors = ["Miroshka"]
publish = false

[workspace.dependencies]
aes-gcm-siv = "0.11.1"
anneal-audit = { path = "crates/audit" }
anneal-auth = { path = "crates/auth" }
anneal-config-engine = { path = "crates/config-engine" }
anneal-core = { path = "crates/core" }
anneal-nodes = { path = "crates/nodes" }
anneal-notifications = { path = "crates/notifications" }
anneal-platform = { path = "crates/platform" }
anneal-rbac = { path = "crates/rbac" }
anneal-subscriptions = { path = "crates/subscriptions" }
anneal-usage = { path = "crates/usage" }
anneal-users = { path = "crates/users" }
anyhow = "1.0.102"
apalis = "1.0.0-rc.6"
apalis-postgres = { version = "1.0.0-rc.6", features = ["migrate", "tokio-comp", "chrono"] }
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde", "clock"] }
clap = { version = "4.5.49", features = ["derive", "env"] }
dialoguer = "0.11.0"
futures = "0.3.32"
hmac = "0.12.1"
indicatif = "0.18.4"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
rand = "0.10.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate", "macros"] }
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
totp-rs = { version = "5.7.1", features = ["gen_secret", "otpauth"] }
toml = "0.8.19"
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.1", features = ["grpc-tonic"] }
opentelemetry_sdk = "0.31.0"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[workspace.lints.clippy]
all = "warn"
nursery = "warn"
pedantic = "warn"
