[package]
name = "annealctl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
anneal-core.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm = "0.28.1"
dialoguer.workspace = true
indicatif.workspace = true
rand.workspace = true
ratatui = "0.29.0"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
totp-rs.workspace = true
uuid.workspace = true
