[package]
name = "annealctl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
anneal-core.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm = "0.29.0"
dialoguer.workspace = true
indicatif.workspace = true
rand.workspace = true
ratatui = { version = "0.30.0", features = ["crossterm_0_28"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
totp-rs.workspace = true
uuid.workspace = true
