[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
anneal-audit.workspace = true
anneal-auth.workspace = true
anneal-config-engine.workspace = true
anneal-core.workspace = true
anneal-notifications.workspace = true
anneal-platform.workspace = true
anneal-rbac.workspace = true
anneal-subscriptions.workspace = true
anneal-usage.workspace = true
anneal-users.workspace = true
anyhow.workspace = true
apalis.workspace = true
apalis-postgres.workspace = true
axum.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true
