[package]
name = "worker"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
anneal-audit.workspace = true
anneal-core.workspace = true
anneal-notifications.workspace = true
anneal-platform.workspace = true
anyhow.workspace = true
apalis.workspace = true
apalis-postgres.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
