[package]
name = "anneal-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
utoipa.workspace = true
uuid.workspace = true
