[package]
name = "anneal-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
aes-gcm-siv.workspace = true
base64.workspace = true
chrono.workspace = true
hmac.workspace = true
rand.workspace = true
serde.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
utoipa.workspace = true
uuid.workspace = true
