[package]
name = "anneal-subscriptions"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
anneal-config-engine.workspace = true
anneal-core.workspace = true
anneal-nodes.workspace = true
anneal-rbac.workspace = true
async-trait.workspace = true
chrono.workspace = true
rand.workspace = true
serde.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
utoipa.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
