[package]
name = "anneal-usage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
anneal-core.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
